Fixed container overflow

--- a/public/app/assets/stylesheets/custom.scss
+++ b/public/app/assets/stylesheets/custom.scss
@@ -150,3 +150,6 @@ tr.waypoint {
 .px-7 {
     padding-left: 7rem !important;
 }
+.infinite-record-container{
+    transform:none !important;
+}
